# morden-python-project-template

./: LICENSE  README.md  cookiecutter.json  helper_snippet.sh
{{cookiecutter.github_repo}}/: .envrc  .envrc.private  .gitignore  LICENSE  README.md  pyrightconfig.json  setup.cfg
{{cookiecutter.project_repo_name}}/: .style.yapf  LICENSE  README.md  dev_requirements.txt  pyproject.toml  setup.cfg
