[tool.poetry]
name = "{{cookiecutter.project_repo_name}}"
version = "{{cookiecutter.version}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "{{cookiecutter.license}}"
description = ""
readme = "README.md"
repository = "https://github.com/{{cookiecutter.author_github_username}}/{{cookiecutter.project_py_name}}"
packages = [
    { include = "{{cookiecutter.project_py_name}}" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.29.0"
flake8 = "^3.8.2"
twine = "^3.1.1"

# CLI.
# [tool.poetry.scripts]
# {{cookiecutter.project_repo_name}} = "{{cookiecutter.project_py_name}}:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
