[metadata]
name = {{cookiecutter.project_repo_name}}
version = {{cookiecutter.version}}
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
description = todo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{cookiecutter.author_github_username}}/{{cookiecutter.project_py_name}}

[options]
packages = find:
python_requires = ~=3.8
