[metadata]
name = {{cookiecutter.project_repo_name}}
version = {{cookiecutter.version}}
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
description = todo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{cookiecutter.author_github_username}}/{{cookiecutter.project_py_name}}

[options]
packages = find:
python_requires = ~=3.8
install_requires =

[options.extras_require]
dev =
    build >= 0.2.1
    fireball >= 0.5.0
    iolite >= 0.3.0
    pytest >= 6.1.2
    yapf >= 0.30.0
    flake8 >= 3.8.4
    pdoc3 >= 0.9.2
    twine >= 3.2.0
    ipython >= 7.20.0
    pdbpp >= 0.10.2
